k8s-setup/bookinfo/NetworkPolicy/base/000-allow-all.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: temp-allow-all
  namespace: dev1
spec:
  tier: default
  order: 1
  selector: all()
  ingress:
  - action: Allow
  egress:
  - action: Allow
