k8s-setup/bookinfo/NetworkPolicy/base/01-allow-dns.yaml
# Allow DNS resolution (required for all Pods)
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: dev1
spec:
  tier: default
  order: 900
  selector: all()
  egress:
  - action: Allow
    protocol: UDP
    destination:
      selector: k8s-app == "kube-dns"
      namespaceSelector: kubernetes.io/metadata.name == "kube-system"
      ports: [53]
  - action: Allow
    protocol: TCP
    destination:
      selector: k8s-app == "kube-dns"
      namespaceSelector: kubernetes.io/metadata.name == "kube-system"
      ports: [53]
