k8s-setup/bookinfo/NetworkPolicy/base/02-allow-k8s-api.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-api-access
  namespace: dev1
spec:
  tier: default
  order: 900
  selector: all()
  egress:
    - action: Allow
      destination:
        services:
          name: kubernetes
          namespace: default
